RESOLVED FIXED219467
Many different assertion failures on the GPU process bot after r270366
https://bugs.webkit.org/show_bug.cgi?id=219467
Summary Many different assertion failures on the GPU process bot after r270366
Tim Horton
Reported 2020-12-02 17:45:59 PST
Many different assertion failures on the GPU process bot after r270366
Attachments
Patch (6.52 KB, patch)
2020-12-02 17:46 PST, Tim Horton
simon.fraser: review+
patch (6.46 KB, patch)
2020-12-02 20:10 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-12-02 17:46:10 PST
Tim Horton
Comment 2 2020-12-02 17:47:48 PST
Comment on attachment 415268 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415268&action=review > Source/WebKit/WebProcess/WebPage/WebPage.cpp:3799 > + WebProcess::singleton().setUseGPUProcessForDOMRendering(m_shouldRenderDOMInGPUProcess && DrawingArea::drawingAreaTypeSupportsGPUProcessRendering(m_drawingAreaType)); This is static on DrawingArea, and based on DrawingAreaType instead of just being a virtual bool getter on DrawingArea, because we might not have an m_drawingArea at this point.
Simon Fraser (smfr)
Comment 3 2020-12-02 19:31:49 PST
Comment on attachment 415268 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415268&action=review > Source/WebKit/WebProcess/WebPage/DrawingArea.h:78 > + static bool drawingAreaTypeSupportsGPUProcessRendering(DrawingAreaType); Since this is called like DrawingArea::drawingAreaTypeSupportsGPUProcessRendering() I think you can all it supportsGPUProcessRenderingForType() or just supportsGPUProcessRendering()
Tim Horton
Comment 4 2020-12-02 19:32:31 PST
Comment on attachment 415268 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415268&action=review >> Source/WebKit/WebProcess/WebPage/DrawingArea.h:78 >> + static bool drawingAreaTypeSupportsGPUProcessRendering(DrawingAreaType); > > Since this is called like DrawingArea::drawingAreaTypeSupportsGPUProcessRendering() I think you can all it supportsGPUProcessRenderingForType() or just supportsGPUProcessRendering() true
Tim Horton
Comment 5 2020-12-02 20:10:18 PST
EWS
Comment 6 2020-12-02 21:07:19 PST
Committed r270387: <https://trac.webkit.org/changeset/270387> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415272 [details].
Radar WebKit Bug Importer
Comment 7 2020-12-02 21:08:21 PST
Note You need to log in before you can comment on or make changes to this bug.