Many different assertion failures on the GPU process bot after r270366 https://bugs.webkit.org/show_bug.cgi?id=219467

Reviewed by Simon Fraser.

Source/WebKit:

* WebProcess/WebPage/DrawingArea.cpp:
(WebKit::DrawingArea::supportsGPUProcessRendering):
* WebProcess/WebPage/DrawingArea.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage):
(WebKit::WebPage::updatePreferences):
* WebProcess/WebPage/WebPage.h:
Disable DOM rendering in the GPU process if the DrawingArea doesn't support it.
Currently only RemoteLayerTreeDrawingArea does.

Tools:

* CISupport/build-webkit-org/config.json:
Revert r270366; macOS UI-side compositing is in way too sad
of a state, the world is not ready for this yet.


Canonical link: https://commits.webkit.org/232072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270387 268f45cc-cd09-0410-ab3c-d52691b4dbfc